[workspace]
resolver = "2"
members = [
    "packages/proto-build",
    "packages/provwasm-common",
    "packages/provwasm-proc-macro",
    "packages/provwasm-std",
    "packages/provwasm-mocks",
    "contracts/attrs",
    "contracts/ibc/local",
    "contracts/ibc/remote",
    "contracts/marker",
    "contracts/msgfees",
    "contracts/name",
    "contracts/scope",
    "contracts/trigger",
    "contracts/tutorial",
]

[workspace.package]
version = "2.2.0"
repository = "https://github.com/provenance-io/provwasm"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
### CosmWasm

cosmwasm-schema = { version = "1.5" }
cosmwasm-std = { version = "1.5", default-features = false, features = ["cosmwasm_1_1"] }
cw-storage-plus = { version = "1.2.0" }

### ProvWasm
provwasm-proto-build = { version = "0.1.0", path = "packages/proto-build" }
provwasm-common = { version = "0.1.0", path = "packages/provwasm-common" }
provwasm-mocks = { version = "2.2.0", path = "packages/provwasm-mocks" }
provwasm-proc-macro = { version = "0.1.1", path = "packages/provwasm-proc-macro" }
provwasm-std = { version = "2.2.0", path = "packages/provwasm-std" }

base64 = "0.22.0"
chrono = { version = "0.4.37", default-features = false }
prost = { version = "=0.11.9", default-features = false, features = [
    "prost-derive",
] }
prost-types = { version = "0.11.9", default-features = false }
prost-build = "0.11.9"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = [
    "derive",
] }
serde_json = { version = "1.0.115", features = ["std"] }
thiserror = { version = "1.0.58" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
