[package]
name = "integration"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []

[dependencies]
#cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
#cw-storage-plus = { workspace = true }
marker = { version = "2.2.0", path = "../contracts/marker" }
provwasm-std = { workspace = true }
#schemars = { workspace = true }
#serde = { workspace = true, default-features = false, features = ["derive"] }
#thiserror = { workspace = true }

[dev-dependencies]
prost = { workspace = true, default-features = false }
provwasm-mocks = { workspace = true }
provwasm-test-tube = { workspace = true }