[package]
name = "attrs"
version = "2.2.0"
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]
edition = "2021"

exclude = [
    "attrs.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, default-features = false }
cosmwasm-storage = { workspace = true }
provwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
provwasm-mocks = { workspace = true }
