[package]
name = "bilateral-exchange"
version = "0.1.0"
authors = ["Ken Talley <ktalley@figure.com>"]
edition = "2018"

exclude = [
  "bilateral_exchange.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.13.2" }
cosmwasm-storage = { version = "0.13.2" }
provwasm-std = { version = "0.13.2", path = "../../packages/bindings"}
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "0.13.2" }
provwasm-mocks = { version = "0.13.2", path = "../../packages/mocks"}
