[package]
name = "marker"
version = "2.2.0"
authors = ["Phil Story <pstory@figure.com>", "Ken Talley <4344285+kwtalley@users.noreply.github.com"]
edition = "2018"

exclude = [
  "marker.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
provwasm-std = { workspace = true }
schemars = {workspace = true}
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
prost = {workspace = true, default-features = false}
provwasm-mocks = { workspace = true }
