[package]
name = "marker"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Phil Story <pstory@figure.com>", "Ken Talley <4344285+kwtalley@users.noreply.github.com"]

exclude = [
    "marker.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
provwasm-std = { workspace = true, default-features = false, features = ["provenance-marker", "provenance-name", "cosmos-auth"] }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
prost = { workspace = true }
provwasm-mocks = { workspace = true }
