[package]
name = "msgfees"
version = "1.0.1"
authors = ["Ken Talley <ktalley@figure.com>"]
edition = "2018"

exclude = [
  "msgfees.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
provwasm-std = { path = "../../packages/bindings" }
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = "1.0.0"
schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
provwasm-mocks = { path = "../../packages/mocks" }
cosmwasm-schema = { version = "1.0.0" }
