[package]
name = "name"
version = "2.2.0"
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]
edition = "2021"

exclude = [
    "name.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
jsonformat = "2.0.0"
provwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
provwasm-mocks = { workspace = true }
