[package]
name = "name"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]

exclude = [
    "name.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = ["stargate", "std"] }
cw-storage-plus = { workspace = true }
jsonformat = "2.0.0"
provwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
provwasm-mocks = { workspace = true }
