[package]
name = "nft"
version = "2.1.0"
authors = ["Ken Talley <ktalley@provenance.io"]
edition = "2021"

exclude = [
    "nft.wasm",
    "checksums.txt",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
bech32 = "0.9.1"
cosmwasm-schema = { version = "1.2.5" }
cosmwasm-std = { version = "1.2.5", features = ["cosmwasm_1_1"] }
cosmwasm-storage = { version = "1.2.5" }
cw2 = "1.0.1"
cw721 = "0.18.0"
cw-ownable = "0.5.1"
cw-storage-plus = { version = "1.1.0", features = ["iterator"] }
cw-utils = "1.0.1"
hex = { version = "0.4.3", default-features = false }
provwasm-std = { path = "../../packages/provwasm-std" }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96" }
sha2 = { version = "0.10.7", default-features = false }
thiserror = { version = "1.0.31" }
semver = "1"
uuid = { version = "1.4.1", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0.96", features = ["std"] }
provwasm-mocks = { path = "../../packages/provwasm-mocks" }
cw-multi-test = "0.16.2"