[package]
name = "nft"
version = "2.2.0"
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]
edition = "2021"

exclude = [
    "nft.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
bech32 = "0.9.1"
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1"] }
cw2 = "1.0.1"
cw721 = "0.18.0"
cw-ownable = "0.5.1"
cw-storage-plus = { workspace = true, features = ["iterator"] }
cw-utils = "1.0.1"
hex = { version = "0.4.3", default-features = false }
provwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { version = "0.10.7", default-features = false }
thiserror = { workspace = true }
semver = "1"
uuid = { version = "1.4.1", default-features = false }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
provwasm-mocks = { workspace = true }
cw-multi-test = "0.16.2"