[package]
name = "scope"
version = "1.2.0"
authors = ["Ken Talley <ktalley@provenance.io"]
edition = "2018"

exclude = [
  "scope.wasm",
  "checksums.txt",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
cosmwasm-schema = { version = "1.1.9" }
cosmwasm-std = { version = "1.1.9", default-features = false }
cosmwasm-storage = { version = "1.1.9" }
provwasm-std = { path = "../../packages/bindings" }
schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }


[dev-dependencies]
provwasm-mocks = { path = "../../packages/mocks" }
