[package]
name = "security"
version = "2.2.0"
authors = ["Matthew Witkowski <mwitkowski@provenance.io"]
edition = "2021"

exclude = ["security.wasm", "security-aarch64.wasm", "checksums.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.0
"""
optimize-arm = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.15.0
"""

[dependencies]
provwasm-std = { version = "2.1.0" }
cosmwasm-schema = { version = "1.5.3" }
cosmwasm-std = { version = "1.5.2", default-features = false }
cw-storage-plus = { version = "1.2.0", features = ["iterator"] }
cw2 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.57" }
semver = { version = "1.0.21" }

[dev-dependencies]
provwasm-mocks = { version = "2.1.0" }
