[package]
name = "template"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Matthew Witkowski <mwitkowski@provenance.io"]

exclude = ["contract.wasm", "checksums.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""
optimize-arm = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.14.0
"""

[dependencies]
provwasm-std = { workspace = true }
cw-utils = { version = "1.0.1" }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1"] }
cw-storage-plus = { workspace = true, features = ["iterator"] }
cw2 = "1.0.1"
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }
semver = "1"

[dev-dependencies]
provwasm-mocks = { workspace = true }
cw-multi-test = "0.17.0"
