[package]
name = "trigger"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]

exclude = [
    "trigger.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
provwasm-std = { workspace = true, default-features = false, features = ["provenance-trigger", "cosmos-bank"] }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
provwasm-mocks = { workspace = true }
