[package]
name = "provwasm-tutorial"
version = "2.2.0"
authors = ["fkneeland <fkneeland@figure.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/provenance-io/fkneeland-figure/smart-contract-tutorial"
description = "A simple smart contract used for testing inside of the Provenance blockchain"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]
## use library feature to disable all instantiate/execute/query exports
#library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, default-features = false }
cw-storage-plus = { workspace = true }
provwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
#provwasm-mocks = { path = "../../todo/mocks" }
