[package]
name = "ibc-local"
version = "2.0.0"
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]
edition = "2021"

exclude = [
    "ibc_local.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = []

[dependencies]
cosmwasm-schema = { version = "1.2.5" }
cosmwasm-std = { version = "1.2.5", features = ["iterator", "staking", "stargate"] }
cosmwasm-storage = { version = "1.2.5" }
provwasm-std = { path = "../../../packages/provwasm-std" }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
#provwasm-mocks = { path = "../../../todo/mocks" }

