[package]
name = "ibc-local"
version = "2.2.0"
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]
edition = "2021"

exclude = [
    "ibc_local.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = ["iterator", "staking", "stargate"] }
cw-storage-plus = { workspace = true }
provwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }

[dev-dependencies]
#provwasm-mocks = { path = "../../../todo/mocks" }

