[package]
name = "ibc-remote"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]

exclude = [
    "ibc_remote.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
provwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }

[dev-dependencies]
#provwasm-mocks = { path = "../../../todo/mocks" }

